force-app/main/default/objects/Tag__c/fields/Client_DREAM_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_DREAM_ID__c</fullName>
    <label>Client DREAM ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>