force-app/main/default/objects/Tag__c/fields/Dimension_Label_DB__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Label_DB__c</fullName>
    <label>Dimension Label DB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>