force-app/main/default/objects/Tag__c/fields/Dimension_Label_MP__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Label_MP__c</fullName>
    <label>Dimension Label MP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>