force-app/main/default/objects/Tag__c/fields/Dimension_Value__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Value__c</fullName>
    <label>Dimension Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>