force-app/main/default/objects/Tag__c/fields/Future_Key_Dates__c.field-meta.xml
<CustomField>
    <fullName>Future_Key_Dates__c</fullName>
    <label>Future Key Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>