force-app/main/default/objects/Tag__c/fields/Intention_Label_DB__c.field-meta.xml
<CustomField>
    <fullName>Intention_Label_DB__c</fullName>
    <label>Intention Label DB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>