force-app/main/default/objects/Tag__c/fields/Relation_Color__c.field-meta.xml
<CustomField>
    <fullName>Relation_Color__c</fullName>
    <label>Relation Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>