force-app/main/default/objects/Tag__c/fields/Relation_Label_DB__c.field-meta.xml
<CustomField>
    <fullName>Relation_Label_DB__c</fullName>
    <label>Relation Label DB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>