force-app/main/default/objects/Tag__c/fields/TagId__c.field-meta.xml
<CustomField>
    <fullName>TagId__c</fullName>
    <label>TagId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>