force-app/main/default/objects/Tag__c/fields/TagId_DB__c.field-meta.xml
<CustomField>
    <fullName>TagId_DB__c</fullName>
    <label>TagId DB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>