force-app/main/default/objects/Tag__c/fields/Type_Label_DB__c.field-meta.xml
<CustomField>
    <fullName>Type_Label_DB__c</fullName>
    <label>Type Label DB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>