force-app/main/default/objects/Tag__c/fields/Type_Label_MP__c.field-meta.xml
<CustomField>
    <fullName>Type_Label_MP__c</fullName>
    <label>Type Label MP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>