force-app/main/default/objects/Tag__c/fields/Value_DB__c.field-meta.xml
<CustomField>
    <fullName>Value_DB__c</fullName>
    <label>Value DB</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>