force-app/main/default/objects/Tag__c/fields/Value_MP__c.field-meta.xml
<CustomField>
    <fullName>Value_MP__c</fullName>
    <label>Value MP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>