force-app/main/default/objects/Tag__c/fields/Voice_URL__c.field-meta.xml
<CustomField>
    <fullName>Voice_URL__c</fullName>
    <label>Voice URL</label>
    <type>Url</type>
</CustomField>